--- a/index.html
+++ b/index.html
@@ -1,97 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="utf-8" />
   <title>Ashish Joshi — AI Engineer & Researcher</title>
-  <link rel="stylesheet" href="style.css"/>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;900&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="css/styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
-<body>
-  <header>
-    <div class="logo">Ashish<span>.</span></div>
-    <nav>
-      <a href="#about">About</a>
-      <a href="#skills">Skills</a>
-      <a href="#projects">Projects</a>
-      <a href="#research">Research</a>
-      <a href="#contact">Contact</a>
-      <button id="theme-toggle">🌙</button>
-    </nav>
-  </header>
 
-  <section class="hero">
-    <div class="hero-text">
-      <h1>Ashish Joshi</h1>
-      <h2 id="typing"></h2>
-      <p>Engineering intelligent systems at the intersection of research and reality.</p>
-    </div>
-    <div class="hero-img">
-      <img src="your_photo.jpg" alt="Ashish Joshi"/>
-    </div>
-  </section>
+<body class="ss-preload">
 
-  <section id="about">
-    <h3>About Me</h3>
+<div class="pagewrap">
+
+<header class="site-header">
+  <div class="logo">Ashish.</div>
+  <nav>
+    <a href="#intro">Intro</a>
+    <a href="#about">About</a>
+    <a href="#work">Work</a>
+    <a href="#contact">Contact</a>
+  </nav>
+</header>
+
+<section id="intro" class="section intro">
+  <div class="intro-inner reveal">
+    <span class="pretitle">Hello World</span>
+    <h1>
+      I am Ashish,<br>
+      an AI Engineer &<br>
+      Researcher<br>
+      building intelligent<br>
+      systems.
+    </h1>
+  </div>
+</section>
+
+<section id="about" class="section about reveal">
+  <div class="content">
+    <h2>About</h2>
     <p>
-      I'm a Master's student in Artificial Intelligence at Boston University with a strong interest in AI research,
-      generative models, and building scalable intelligent systems. I enjoy working across the full stack — from models to products.
+      I am a Master's student in Artificial Intelligence at Boston University, working at the intersection
+      of machine learning research, generative AI, and scalable systems engineering. I focus on building
+      models and products that move research into reality.
     </p>
-  </section>
+  </div>
+</section>
 
-  <section id="skills">
-    <h3>Skills</h3>
-    <div class="grid">
-      <div class="card">Python, C++, Java, SQL, Linux, Git, Docker</div>
-      <div class="card">PyTorch, TensorFlow, HuggingFace, NLP, Diffusion, RAG</div>
-      <div class="card">Pandas, NumPy, MLflow, CI/CD, PostgreSQL, MySQL</div>
-      <div class="card">React, Flask, FastAPI, Firebase, Tableau, Power BI</div>
-    </div>
-  </section>
+<section id="work" class="section work">
+  <div class="content">
+    <h2 class="reveal">Selected Work</h2>
 
-  <section id="projects">
-    <h3>Projects</h3>
-    <div class="grid">
-      <div class="card project">
-        <h4>Multimodal AI Assistant</h4>
-        <p>LLM-based assistant combining vision, text, and tools.</p>
-        <span>GitHub →</span>
+    <div class="work-grid">
+      <div class="work-item reveal">
+        <h3>Autonomous Research Agent</h3>
+        <p>LLM-based agent for literature review and experiment planning.</p>
       </div>
-      <div class="card project">
-        <h4>Autonomous Research Agent</h4>
-        <p>Agent system for literature review and experiment planning.</p>
-        <span>GitHub →</span>
+      <div class="work-item reveal">
+        <h3>Multimodal Assistant</h3>
+        <p>Vision + text + tools in a single reasoning pipeline.</p>
       </div>
-      <div class="card project">
-        <h4>Diffusion Image Generator</h4>
-        <p>Custom trained diffusion pipeline for creative generation.</p>
-        <span>GitHub →</span>
+      <div class="work-item reveal">
+        <h3>Diffusion Image Generator</h3>
+        <p>Creative diffusion model trained on custom datasets.</p>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
-  <section id="research">
-    <h3>Publications & Interests</h3>
-    <ul>
-      <li>Coming Soon — Research on LLM Reasoning and Planning</li>
-      <li>Multimodal Foundation Models</li>
-      <li>AI Agents and Tool Use</li>
-      <li>Diffusion Models and Creative AI</li>
-    </ul>
-  </section>
+<section id="contact" class="section contact reveal">
+  <div class="content">
+    <h2>Say Hello</h2>
+    <p>Let’s talk about AI, research, or building the future.</p>
+    <a class="cta" href="mailto:ashish@bu.edu">ashish@bu.edu</a>
+  </div>
+</section>
 
-  <section id="contact">
-    <h3>Contact</h3>
-    <p>Let’s build something intelligent together.</p>
-    <div class="links">
-      <a href="#">GitHub</a>
-      <a href="#">LinkedIn</a>
-      <a href="mailto:youremail@bu.edu">Email</a>
-    </div>
-  </section>
+<footer class="site-footer">
+  © 2026 Ashish Joshi
+</footer>
 
-  <footer>© 2026 Ashish Joshi</footer>
+</div>
 
-  <script src="script.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
